--- a/404/index.html
+++ b/404/index.html
@@ -96,17 +96,22 @@ body {
   width: 100%;
   position: relative;
   transform: translateY(-50%);
-}</style><link as="script" rel="preload" href="/component---src-pages-404-tsx-f26e821971564ca9e0fb.js"/><link as="script" rel="preload" href="/app-9660ef8b27ad7a63a256.js"/><link as="script" rel="preload" href="/9-a119c25047d0d2e7454e.js"/><link as="script" rel="preload" href="/0-ec9758ffa95b64f4d129.js"/><link as="script" rel="preload" href="/webpack-runtime-2add75ce9c511e5a1716.js"/><link rel="preload" href="/static/d/44/path---404-22-d-bce-NZuapzHg3X9TaN1iIixfv1W23E.json" as="fetch" crossOrigin="use-credentials"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" role="group"><section class="Footer__Section-sc-1bz5sjq-0 Lxsne"><div class="Footer__Content-sc-1bz5sjq-1 jfMuXS"><ul class="jss1" style="margin:-2px"><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>关注</h4><a href="https://weibo.com/uuPin1" target="_black"><p>微博：@游里</p></a><p class="wechat">微信：uupin1<img src="https://ws3.sinaimg.cn/large/006tNbRwgy1fyavwpwln2j30e80e8wep.jpg"/></p><p>QQ群：123456789</p></div></div></li><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>帮助</h4><p>使用教程</p><p>常见问题</p><p>报告BUG</p></div></div></li></ul></div></section><section class="Layout__Section-sc-1pwrqdp-0 eWkBWF"><a href="/">siteTitle</a><h1>NOT FOUND</h1><p>You just hit a route that doesn&#x27;t exist... the sadness.</p></section></div></div><script>
-  
-  
-  if(true) {
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  }
-  if (typeof ga === "function") {
-    ga('create', 'UA-131227022-1', 'auto', {});
-      
-      }
-      </script><script id="gatsby-script-loader">/*<![CDATA[*/window.page={"componentChunkName":"component---src-pages-404-tsx","jsonName":"404-22d","path":"/404/"};window.dataPath="44/path---404-22-d-bce-NZuapzHg3X9TaN1iIixfv1W23E";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-9660ef8b27ad7a63a256.js"],"component---node-modules-gatsby-plugin-offline-app-shell-js":["/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx.0e4338761429b4eb16ac.css","/component---src-pages-404-tsx-f26e821971564ca9e0fb.js"],"component---src-pages-generate-tsx":["/component---src-pages-generate-tsx.0e4338761429b4eb16ac.css","/component---src-pages-generate-tsx-4722f651492cde377dc0.js"],"component---src-pages-index-tsx":["/component---src-pages-index-tsx.fae5552210ffc80258e9.css","/component---src-pages-index-tsx-4129a3532e4c55976317.js"],"component---src-pages-preview-tsx":["/component---src-pages-preview-tsx.0e4338761429b4eb16ac.css","/component---src-pages-preview-tsx-1fbbb20e19750e610f78.js"]};/*]]>*/</script><script src="/webpack-runtime-2add75ce9c511e5a1716.js" async=""></script><script src="/0-ec9758ffa95b64f4d129.js" async=""></script><script src="/9-a119c25047d0d2e7454e.js" async=""></script><script src="/app-9660ef8b27ad7a63a256.js" async=""></script><script src="/component---src-pages-404-tsx-f26e821971564ca9e0fb.js" async=""></script></body></html>
+}</style><link as="script" rel="preload" href="/component---src-pages-404-tsx-f26e821971564ca9e0fb.js"/><link as="script" rel="preload" href="/app-4aefb0266553e81cde43.js"/><link as="script" rel="preload" href="/9-a119c25047d0d2e7454e.js"/><link as="script" rel="preload" href="/0-ec9758ffa95b64f4d129.js"/><link as="script" rel="preload" href="/webpack-runtime-2add75ce9c511e5a1716.js"/><link rel="preload" href="/static/d/44/path---404-22-d-bce-NZuapzHg3X9TaN1iIixfv1W23E.json" as="fetch" crossOrigin="use-credentials"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" role="group"><section class="Footer__Section-sc-1bz5sjq-0 Lxsne"><div class="Footer__Content-sc-1bz5sjq-1 jfMuXS"><ul class="jss1" style="margin:-2px"><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>关注</h4><a href="https://weibo.com/uuPin1" target="_black"><p>微博：@游里</p></a><p class="wechat">微信：uupin1<img src="https://ws3.sinaimg.cn/large/006tNbRwgy1fyavwpwln2j30e80e8wep.jpg"/></p><p>QQ群：123456789</p></div></div></li><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>帮助</h4><p>使用教程</p><p>常见问题</p><p>报告BUG</p></div></div></li></ul></div></section><section class="Layout__Section-sc-1pwrqdp-0 eWkBWF"><a href="/">siteTitle</a><h1>NOT FOUND</h1><p>You just hit a route that doesn&#x27;t exist... the sadness.</p></section></div></div><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131227022-1"></script><script>
+    window.GATSBY_GTAG_PLUGIN_GA_TRACKING_ID = (
+      'UA-131227022-1'
+    );
+    window.GATSBY_GTAG_PLUGIN_ANONYMIZE = false;
+
+    let options = undefined;
+
+    if (false) {
+      options = {
+        anonymize_ip: true
+      };
+    }
+
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-131227022-1', options);
+  </script><script id="gatsby-script-loader">/*<![CDATA[*/window.page={"componentChunkName":"component---src-pages-404-tsx","jsonName":"404-22d","path":"/404/"};window.dataPath="44/path---404-22-d-bce-NZuapzHg3X9TaN1iIixfv1W23E";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-4aefb0266553e81cde43.js"],"component---node-modules-gatsby-plugin-offline-app-shell-js":["/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx.0e4338761429b4eb16ac.css","/component---src-pages-404-tsx-f26e821971564ca9e0fb.js"],"component---src-pages-generate-tsx":["/component---src-pages-generate-tsx.0e4338761429b4eb16ac.css","/component---src-pages-generate-tsx-4722f651492cde377dc0.js"],"component---src-pages-index-tsx":["/component---src-pages-index-tsx.fae5552210ffc80258e9.css","/component---src-pages-index-tsx-4129a3532e4c55976317.js"],"component---src-pages-preview-tsx":["/component---src-pages-preview-tsx.0e4338761429b4eb16ac.css","/component---src-pages-preview-tsx-1fbbb20e19750e610f78.js"]};/*]]>*/</script><script src="/webpack-runtime-2add75ce9c511e5a1716.js" async=""></script><script src="/0-ec9758ffa95b64f4d129.js" async=""></script><script src="/9-a119c25047d0d2e7454e.js" async=""></script><script src="/app-4aefb0266553e81cde43.js" async=""></script><script src="/component---src-pages-404-tsx-f26e821971564ca9e0fb.js" async=""></script></body></html>
