--- a/offline-plugin-app-shell-fallback/index.html
+++ b/offline-plugin-app-shell-fallback/index.html
@@ -56,22 +56,14 @@ body {
   body {
     background-color: #fff;
   }
-}</style><link as="script" rel="preload" href="/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js"/><link as="script" rel="preload" href="/app-4aefb0266553e81cde43.js"/><link as="script" rel="preload" href="/webpack-runtime-2add75ce9c511e5a1716.js"/><link rel="preload" href="/static/d/520/path---offline-plugin-app-shell-fallback-a-30-c5a-NZuapzHg3X9TaN1iIixfv1W23E.json" as="fetch" crossOrigin="use-credentials"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" role="group"></div></div><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131227022-1"></script><script>
-    window.GATSBY_GTAG_PLUGIN_GA_TRACKING_ID = (
-      'UA-131227022-1'
-    );
-    window.GATSBY_GTAG_PLUGIN_ANONYMIZE = false;
+}</style><link as="script" rel="preload" href="/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js"/><link as="script" rel="preload" href="/app-84089fce75666981ee8e.js"/><link as="script" rel="preload" href="/webpack-runtime-2add75ce9c511e5a1716.js"/><link rel="preload" href="/static/d/520/path---offline-plugin-app-shell-fallback-a-30-c5a-NZuapzHg3X9TaN1iIixfv1W23E.json" as="fetch" crossOrigin="use-credentials"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" role="group"></div></div><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131227022-1"></script><script>
+      
+      
+      if(true) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    let options = undefined;
-
-    if (false) {
-      options = {
-        anonymize_ip: true
-      };
-    }
-
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-131227022-1', options);
-  </script><script id="gatsby-script-loader">/*<![CDATA[*/window.page={"componentChunkName":"component---node-modules-gatsby-plugin-offline-app-shell-js","jsonName":"offline-plugin-app-shell-fallback-a30","path":"/offline-plugin-app-shell-fallback/"};window.dataPath="520/path---offline-plugin-app-shell-fallback-a-30-c5a-NZuapzHg3X9TaN1iIixfv1W23E";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-4aefb0266553e81cde43.js"],"component---node-modules-gatsby-plugin-offline-app-shell-js":["/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx.0e4338761429b4eb16ac.css","/component---src-pages-404-tsx-f26e821971564ca9e0fb.js"],"component---src-pages-generate-tsx":["/component---src-pages-generate-tsx.0e4338761429b4eb16ac.css","/component---src-pages-generate-tsx-4722f651492cde377dc0.js"],"component---src-pages-index-tsx":["/component---src-pages-index-tsx.fae5552210ffc80258e9.css","/component---src-pages-index-tsx-4129a3532e4c55976317.js"],"component---src-pages-preview-tsx":["/component---src-pages-preview-tsx.0e4338761429b4eb16ac.css","/component---src-pages-preview-tsx-1fbbb20e19750e610f78.js"]};/*]]>*/</script><script src="/webpack-runtime-2add75ce9c511e5a1716.js" async=""></script><script src="/app-4aefb0266553e81cde43.js" async=""></script><script src="/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js" async=""></script></body></html>
+        gtag('config', 'UA-131227022-1', {"send_page_view":false});
+      }
+      </script><script id="gatsby-script-loader">/*<![CDATA[*/window.page={"componentChunkName":"component---node-modules-gatsby-plugin-offline-app-shell-js","jsonName":"offline-plugin-app-shell-fallback-a30","path":"/offline-plugin-app-shell-fallback/"};window.dataPath="520/path---offline-plugin-app-shell-fallback-a-30-c5a-NZuapzHg3X9TaN1iIixfv1W23E";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-84089fce75666981ee8e.js"],"component---node-modules-gatsby-plugin-offline-app-shell-js":["/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx.0e4338761429b4eb16ac.css","/component---src-pages-404-tsx-f26e821971564ca9e0fb.js"],"component---src-pages-generate-tsx":["/component---src-pages-generate-tsx.0e4338761429b4eb16ac.css","/component---src-pages-generate-tsx-4722f651492cde377dc0.js"],"component---src-pages-index-tsx":["/component---src-pages-index-tsx.fae5552210ffc80258e9.css","/component---src-pages-index-tsx-4129a3532e4c55976317.js"],"component---src-pages-preview-tsx":["/component---src-pages-preview-tsx.0e4338761429b4eb16ac.css","/component---src-pages-preview-tsx-1fbbb20e19750e610f78.js"]};/*]]>*/</script><script src="/webpack-runtime-2add75ce9c511e5a1716.js" async=""></script><script src="/app-84089fce75666981ee8e.js" async=""></script><script src="/component---node-modules-gatsby-plugin-offline-app-shell-js-065903824368f3200d04.js" async=""></script></body></html>
