--- a/generate/index.html
+++ b/generate/index.html
@@ -713,10 +713,10 @@ body {
   justify-content: inherit;
 }
 .jss190 {
-  color: #3f51b5;
+  color: #FEDBD0;
 }
 .jss190:hover {
-  background-color: rgba(63, 81, 181, 0.08);
+  background-color: rgba(254, 219, 208, 0.08);
 }
 @media (hover: none) {
   .jss190:hover {
@@ -738,12 +738,12 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.23);
 }
 .jss196 {
-  color: #3f51b5;
-  border: 1px solid rgba(63, 81, 181, 0.5);
+  color: #FEDBD0;
+  border: 1px solid rgba(254, 219, 208, 0.5);
 }
 .jss196:hover {
-  border: 1px solid #3f51b5;
-  background-color: rgba(63, 81, 181, 0.08);
+  border: 1px solid #FEDBD0;
+  background-color: rgba(254, 219, 208, 0.08);
 }
 .jss196.jss207 {
   border: 1px solid rgba(0, 0, 0, 0.26);
@@ -797,15 +797,15 @@ body {
   background-color: rgba(0, 0, 0, 0.12);
 }
 .jss199 {
-  color: #fff;
-  background-color: #3f51b5;
+  color: #442B2D;
+  background-color: #FEDBD0;
 }
 .jss199:hover {
-  background-color: #303f9f;
+  background-color: #F2D1C7;
 }
 @media (hover: none) {
   .jss199:hover {
-    background-color: #3f51b5;
+    background-color: #FEDBD0;
   }
 }
 .jss200 {
@@ -889,7 +889,7 @@ body {
   flex-shrink: 0;
 }
 .jss217 {
-  color: #3f51b5;
+  color: #FEDBD0;
 }
 .jss218 {
   color: #f50057;
@@ -1067,7 +1067,7 @@ label[data-shrink=false] + .jss168 .jss177:focus::-ms-input-placeholder {
   position: absolute;
   transform: scaleX(0);
   transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-  border-bottom: 2px solid #303f9f;
+  border-bottom: 2px solid #F2D1C7;
   pointer-events: none;
 }
 .jss155.jss156:after {
@@ -1148,7 +1148,7 @@ label[data-shrink=false] + .jss168 .jss177:focus::-ms-input-placeholder {
   line-height: 1;
 }
 .jss147.jss148 {
-  color: #303f9f;
+  color: #F2D1C7;
 }
 .jss147.jss149 {
   color: rgba(0, 0, 0, 0.38);
@@ -1202,7 +1202,7 @@ label[data-shrink=false] + .jss168 .jss177:focus::-ms-input-placeholder {
 }
 .jss146.jss143 {
   transform: translate(14px, -6px) scale(0.75);
-}</style><link rel="shortcut icon" href="/icons/icon-48x48.png"/><link rel="manifest" href="/manifest.webmanifest"/><link as="script" rel="preload" href="/component---src-pages-generate-tsx-077c30afd6f5fdabe504.js"/><link as="script" rel="preload" href="/app-1b4719e945f69251e463.js"/><link as="script" rel="preload" href="/2-cb61d2a5c9fc7742d4a0.js"/><link as="script" rel="preload" href="/1-b93c19020242a6af27ac.js"/><link as="script" rel="preload" href="/0-84cdc230c46f40eabf7f.js"/><link as="script" rel="preload" href="/webpack-runtime-20be2858fb0dd42e0f1d.js"/><link rel="preload" href="/static/d/355/path---generate-703-6f6-NZuapzHg3X9TaN1iIixfv1W23E.json" as="fetch" crossOrigin="use-credentials"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" role="group"><section class="Footer__Section-sc-1bz5sjq-0 Lxsne"><div class="Footer__Content-sc-1bz5sjq-1 jfMuXS"><ul class="jss1" style="margin:-2px"><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>关注</h4><a href="https://weibo.com/uuPin1" target="_black"><p>微博：@游里</p></a><p class="wechat">微信：uupin1<img src="https://ws3.sinaimg.cn/large/006tNbRwgy1fyavwpwln2j30e80e8wep.jpg"/></p><p>QQ群：123456789</p></div></div></li><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>帮助</h4><p>使用教程</p><p>常见问题</p><p>报告BUG</p></div></div></li></ul></div></section><section class="Layout__Section-sc-1pwrqdp-0 dnMvnk"><div id="main" class="Wrapper__Section-sc-12mqwn2-0 bONXgG"><section class="Header__Section-sc-1ompd6b-0 jAdbLk"><div class="jss6"><div class="jss7 jss35"></div><div class="jss7 jss38"><div class="Header__Font-sc-1ompd6b-1 hZRpnT">PINKX</div></div><div class="jss7 jss36"><a href="/"><img src="/img/hema.svg" alt="Logo"/></a></div><div class="jss7 jss38"><div class="Header__Font-sc-1ompd6b-1 hZRpnT">编帖助手</div></div><div class="jss7 jss35"></div></div></section><div class="jss104 jss107 jss105 jss103"><div class="CardHeader-sc-1t3ono5-0 ifdzAw"><h2>填写详细信息</h2></div><div class="jss131 card-title"></div><div class="jss131"><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">广播剧名<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="title" required="" value="广播剧标题"/></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">副标题<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="subtitle" required="" value="各组社室"/></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">第N期<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="episode" required="" value="全一期"/></div></div><div class="jss132 jss135" prefix="https://"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">正剧海报<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="dramaPoster" required="" value="https://ws3.sinaimg.cn/large/006tNbRwgy1fy8xkbdep1j31540u0myo.jpg"/></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">制作组名单<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168 jss175 jss161"><div class="jss184"><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="1" tabindex="-1"></textarea><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="4" tabindex="-1">策划：策划的名字【策划的社团】@策划的微博
+}</style><link rel="shortcut icon" href="/icons/icon-48x48.png"/><link rel="manifest" href="/manifest.webmanifest"/><link as="script" rel="preload" href="/component---src-pages-generate-tsx-b82fa91f6ea1acecd095.js"/><link as="script" rel="preload" href="/app-9a714107c49954964593.js"/><link as="script" rel="preload" href="/2-cb61d2a5c9fc7742d4a0.js"/><link as="script" rel="preload" href="/1-b93c19020242a6af27ac.js"/><link as="script" rel="preload" href="/0-84cdc230c46f40eabf7f.js"/><link as="script" rel="preload" href="/webpack-runtime-f229eae60b4d632538db.js"/><link rel="preload" href="/static/d/355/path---generate-703-6f6-NZuapzHg3X9TaN1iIixfv1W23E.json" as="fetch" crossOrigin="use-credentials"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" role="group"><section class="Footer__Section-sc-1bz5sjq-0 Lxsne"><div class="Footer__Content-sc-1bz5sjq-1 jfMuXS"><ul class="jss1" style="margin:-2px"><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>关注</h4><a href="https://weibo.com/uuPin1" target="_black"><p>微博：@游里</p></a><p class="wechat">微信：uupin1<img src="https://ws3.sinaimg.cn/large/006tNbRwgy1fyavwpwln2j30e80e8wep.jpg"/></p><p>QQ群：123456789</p></div></div></li><li class="jss2" style="width:50%;height:304px;padding:2px"><div class="jss3"><div class="Footer__List-sc-1bz5sjq-2 jQIMgy"><h4>帮助</h4><p>使用教程</p><p>常见问题</p><p>报告BUG</p></div></div></li></ul></div></section><section class="Layout__Section-sc-1pwrqdp-0 dnMvnk"><div id="main" class="Wrapper__Section-sc-12mqwn2-0 bONXgG"><section class="Header__Section-sc-1ompd6b-0 jAdbLk"><div class="jss6"><div class="jss7 jss35"></div><div class="jss7 jss38"><div class="Header__Font-sc-1ompd6b-1 hZRpnT">PINKX</div></div><div class="jss7 jss36"><a href="/"><img src="/img/hema.svg" alt="Logo"/></a></div><div class="jss7 jss38"><div class="Header__Font-sc-1ompd6b-1 hZRpnT">编帖助手</div></div><div class="jss7 jss35"></div></div></section><div class="jss104 jss107 jss105 jss103"><div class="CardHeader-sc-1t3ono5-0 ifdzAw"><h2>填写详细信息</h2></div><div class="jss131 card-title"></div><div class="jss131"><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">广播剧名<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="title" required="" value="广播剧标题"/></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">副标题<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="subtitle" required="" value="各组社室"/></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">第N期<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="episode" required="" value="全一期"/></div></div><div class="jss132 jss135" prefix="https://"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">正剧海报<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168"><input type="text" aria-invalid="false" class="jss177 jss162" name="dramaPoster" required="" value="https://ws3.sinaimg.cn/large/006tNbRwgy1fy8xkbdep1j31540u0myo.jpg"/></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">制作组名单<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168 jss175 jss161"><div class="jss184"><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="1" tabindex="-1"></textarea><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="4" tabindex="-1">策划：策划的名字【策划的社团】@策划的微博
 导演：三只耳朵的兔子@食肉兔子
 编剧：佚名【我们爱明明】@你的唯一
 后期：无中有【蒙面】@你看不见我
@@ -1224,7 +1224,7 @@ label[data-shrink=false] + .jss168 .jss177:focus::-ms-input-placeholder {
 后期：无害工作室@无公害的后期工作室</textarea><textarea rows="4" class="jss185 jss177 jss162 jss179 jss164" style="height:76px" aria-invalid="false" name="edStr" required="">歌名：《算了吧》
 填词：QAQ@爱哭鬼
 翻唱：小姐姐@家有一只爱哭鬼
-后期：无害工作室@无公害的后期工作室</textarea></div></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">链接列表<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168 jss175 jss161"><div class="jss184"><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="1" tabindex="-1"></textarea><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="4" tabindex="-1">百度网盘：http://pan.baidu.com/s/1qYskKPY【3n0h】</textarea><textarea rows="4" class="jss185 jss177 jss162 jss179 jss164" style="height:76px" aria-invalid="false" name="linkStr" required="">百度网盘：http://pan.baidu.com/s/1qYskKPY【3n0h】</textarea></div></div></div></div><div class="Arrow-sc-1knuvyh-0 PTQUS"><a href="/select"><button class="jss213 jss187 jss198 jss201 jss211 button" tabindex="0" type="button"><span class="jss188">生成<svg class="jss216" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"></path></svg></span></button></a><a href="/"><button class="jss213 jss187 jss189 jss192 jss211 button" tabindex="0" type="button"><span class="jss188"><svg class="jss216" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path></svg>上一步</span></button></a></div></div></div></section></div></div><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131227022-1"></script><script>
+后期：无害工作室@无公害的后期工作室</textarea></div></div></div><div class="jss132 jss135"><label class="jss147 jss151 jss152 jss140 jss136 jss141 jss144 jss143 jss145" data-shrink="true">链接列表<span class="jss153"> *</span></label><div class="jss167 jss154 jss155 jss176 jss168 jss175 jss161"><div class="jss184"><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="1" tabindex="-1"></textarea><textarea aria-hidden="true" class="jss185 jss186" readonly="" rows="4" tabindex="-1">百度网盘：http://pan.baidu.com/s/1qYskKPY【3n0h】</textarea><textarea rows="4" class="jss185 jss177 jss162 jss179 jss164" style="height:76px" aria-invalid="false" name="linkStr" required="">百度网盘：http://pan.baidu.com/s/1qYskKPY【3n0h】</textarea></div></div></div></div><div class="Arrow-sc-1knuvyh-0 PTQUS"><a href="/select"><button class="jss213 jss187 jss198 jss199 jss201 jss202 jss211 button" tabindex="0" type="button"><span class="jss188">生成<svg class="jss216" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"></path></svg></span></button></a><a href="/"><button class="jss213 jss187 jss189 jss192 jss211 button" tabindex="0" type="button"><span class="jss188"><svg class="jss216" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"></path></svg>上一步</span></button></a></div></div></div></section></div></div><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131227022-1"></script><script>
       
       
       if(true) {
@@ -1234,4 +1234,4 @@ label[data-shrink=false] + .jss168 .jss177:focus::-ms-input-placeholder {
 
         gtag('config', 'UA-131227022-1', {"send_page_view":false});
       }
-      </script><script id="gatsby-script-loader">/*<![CDATA[*/window.page={"componentChunkName":"component---src-pages-generate-tsx","jsonName":"generate-703","path":"/generate/"};window.dataPath="355/path---generate-703-6f6-NZuapzHg3X9TaN1iIixfv1W23E";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-1b4719e945f69251e463.js"],"component---node-modules-gatsby-plugin-offline-app-shell-js":["/component---node-modules-gatsby-plugin-offline-app-shell-js-4343baf27b2ef7c45526.js"],"component---src-templates-theme-tsx":["/component---src-templates-theme-tsx.0e4338761429b4eb16ac.css","/component---src-templates-theme-tsx-ec68d94d1704afdd744b.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx.0e4338761429b4eb16ac.css","/component---src-pages-404-tsx-92b008b7a746996402ee.js"],"component---src-pages-about-tsx":["/component---src-pages-about-tsx.0e4338761429b4eb16ac.css","/component---src-pages-about-tsx-42f84cd0c1b860299147.js"],"component---src-pages-generate-tsx":["/component---src-pages-generate-tsx.0e4338761429b4eb16ac.css","/component---src-pages-generate-tsx-077c30afd6f5fdabe504.js"],"component---src-pages-index-tsx":["/component---src-pages-index-tsx.21cd49bcf58fa6ef20bb.css","/component---src-pages-index-tsx-ac1059ab83960fcfbe57.js"],"component---src-pages-select-tsx":["/component---src-pages-select-tsx.0e4338761429b4eb16ac.css","/component---src-pages-select-tsx-ac2ae059ce2c0ad366e5.js"]};/*]]>*/</script><script src="/webpack-runtime-20be2858fb0dd42e0f1d.js" async=""></script><script src="/0-84cdc230c46f40eabf7f.js" async=""></script><script src="/1-b93c19020242a6af27ac.js" async=""></script><script src="/2-cb61d2a5c9fc7742d4a0.js" async=""></script><script src="/app-1b4719e945f69251e463.js" async=""></script><script src="/component---src-pages-generate-tsx-077c30afd6f5fdabe504.js" async=""></script></body></html>
+      </script><script id="gatsby-script-loader">/*<![CDATA[*/window.page={"componentChunkName":"component---src-pages-generate-tsx","jsonName":"generate-703","path":"/generate/"};window.dataPath="355/path---generate-703-6f6-NZuapzHg3X9TaN1iIixfv1W23E";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"app":["/app-9a714107c49954964593.js"],"component---node-modules-gatsby-plugin-offline-app-shell-js":["/component---node-modules-gatsby-plugin-offline-app-shell-js-4343baf27b2ef7c45526.js"],"component---src-templates-theme-tsx":["/component---src-templates-theme-tsx.0e4338761429b4eb16ac.css","/component---src-templates-theme-tsx-ec68d94d1704afdd744b.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx.0e4338761429b4eb16ac.css","/component---src-pages-404-tsx-92b008b7a746996402ee.js"],"component---src-pages-about-tsx":["/component---src-pages-about-tsx.0e4338761429b4eb16ac.css","/component---src-pages-about-tsx-42f84cd0c1b860299147.js"],"component---src-pages-generate-tsx":["/component---src-pages-generate-tsx.0e4338761429b4eb16ac.css","/component---src-pages-generate-tsx-b82fa91f6ea1acecd095.js"],"component---src-pages-index-tsx":["/component---src-pages-index-tsx.c5a8436541402968a723.css","/component---src-pages-index-tsx-ac1059ab83960fcfbe57.js"],"component---src-pages-select-tsx":["/component---src-pages-select-tsx.0e4338761429b4eb16ac.css","/component---src-pages-select-tsx-89023e78f79ed25af835.js"]};/*]]>*/</script><script src="/webpack-runtime-f229eae60b4d632538db.js" async=""></script><script src="/0-84cdc230c46f40eabf7f.js" async=""></script><script src="/1-b93c19020242a6af27ac.js" async=""></script><script src="/2-cb61d2a5c9fc7742d4a0.js" async=""></script><script src="/app-9a714107c49954964593.js" async=""></script><script src="/component---src-pages-generate-tsx-b82fa91f6ea1acecd095.js" async=""></script></body></html>
