--- a/demo/index.html
+++ b/demo/index.html
@@ -73,7 +73,7 @@
                         <p>pinkX工作组</p>
                       </section>
                       <section id="cover">
-                        <imgChunk data-img=""></imgChunk>
+                        <imgChunk class="img" style="background-image:url(https://placem.at/things)"></imgChunk>
                       </section>
                       <section id="content">
                         <group class="staff">
@@ -197,7 +197,7 @@
                         <item>转载时请保留以上信息完整，谢谢合作！</item>
                       </section>
                     </pinkx>
-                    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+                    <link rel="stylesheet" type="text/css" media="screen" href="/css/1.css" />
                     <!-- 代码结束 -->
                   </div>
                 </td>
