--- a/demo/index.html
+++ b/demo/index.html
@@ -68,9 +68,9 @@
                     <!-- 代码开始 -->
                     <pinkx id="pinkx">
                       <section id="title">
-                        <h1>广播剧标题</h1>
+                        <h1>广播剧标题特别长</h1>
                         <h5>全一期</h5>
-                        <p>pinkX工作组</p>
+                        <p>PinkX工作组</p>
                       </section>
                       <section id="cover">
                         <imgChunk class="img" style="background-image:url(https://placem.at/things)"></imgChunk>
@@ -197,7 +197,7 @@
                         <item>转载时请保留以上信息完整，谢谢合作！</item>
                       </section>
                     </pinkx>
-                    <link rel="stylesheet" type="text/css" media="screen" href="/css/1.css" />
+                    <link rel="stylesheet" type="text/css" media="screen" href="/css/0.css" />
                     <!-- 代码结束 -->
                   </div>
                 </td>
