--- a/demo/index.html
+++ b/demo/index.html
@@ -67,52 +67,52 @@
                     <!-- 代码设计：@游里 -->
                     <!-- 代码开始 -->
                     <pinkx id="pinkx">
-                      <section id="title">
+                      <section id="title" data-title="广播剧标题特别长">
                         <h1>广播剧标题特别长</h1>
                         <h5>全一期</h5>
                         <p>PinkX工作组</p>
                       </section>
                       <section id="cover">
-                        <imgChunk class="img" style="background-image:url(https://placem.at/things)"></imgChunk>
+                        <imgChunk class="img" data-cover="https://placem.at/things" style="background-image:url(https://placem.at/things)"></imgChunk>
                       </section>
                       <section id="content">
                         <group class="staff">
                           <h3>制作组</h3>
                           <item>
-                            <a href="" target="_black" class="item">
+                            <a href="" target="_black" class="member">
                               <span class="job">策划</span>
                               <span class="name">策划的名字</span>
                               <span class="org">策划的社团</span>
                             </a>
                           </item>
                           <item>
-                            <a href="" target="_black" class="item">
+                            <a href="" target="_black" class="member">
                               <span class="job">导演</span>
                               <span class="name">三只耳朵的兔子</span>
                             </a>
                           </item>
                           <item>
-                            <a href="" target="_black" class="item">
+                            <a href="" target="_black" class="member">
                               <span class="job">编剧</span>
                               <span class="name">佚名</span>
                               <span class="org">我们爱明明</span>
                             </a>
                           </item>
                           <item>
-                            <a href="" target="_black" class="item">
+                            <a href="" target="_black" class="member">
                               <span class="job">后期</span>
                               <span class="name">无中有</span>
                               <span class="org">蒙面</span>
                             </a>
                           </item>
                           <item>
-                            <a href="" target="_black" class="item">
+                            <a href="" target="_black" class="member">
                               <span class="job">海报</span>
                               <span class="name">萌哒哒</span>
                             </a>
                           </item>
                           <item>
-                            <a href="" class="item">
+                            <a href="" class="member">
                               <span class="job">宣传</span>
                               <span class="name">游里&pinkX</span>
                             </a>
@@ -121,35 +121,35 @@
                         <group class="cast">
                           <h3>配音组</h3>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">男一</span>
                               <span class="name">男一的名字</span>
                               <span class="org">男一的社团</span>
                             </a>
                           </item>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">男二</span>
                               <span class="name">男二的名字</span>
                               <span class="org">男二的社团</span>
                             </a>
                           </item>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">女一</span>
                               <span class="name">女一的名字</span>
                               <span class="org">女一的社团</span>
                             </a>
                           </item>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">女二</span>
                               <span class="name">女二的名字</span>
                               <span class="org">女二的社团</span>
                             </a>
                           </item>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">龙套</span>
                               <span class="name">龙套的名字</span>
                               <span class="org">龙套的社团</span>
@@ -159,25 +159,25 @@
                         <group class="ed">
                           <h3>片尾曲</h3>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">歌名</span>
                               <span class="name">《算了吧》</span>
                             </a>
                           </item>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">填词</span>
                               <span class="name">QAQ</span>
                             </a>
                           </item>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">翻唱</span>
                               <span class="name">小姐姐</span>
                             </a>
                           </item>
                           <item>
-                            <a href="#" class="item" target="_black">
+                            <a href="#" class="member" target="_black">
                               <span class="job">后期</span>
                               <span class="name">无害工作室</span>
                             </a>
@@ -197,7 +197,7 @@
                         <item>转载时请保留以上信息完整，谢谢合作！</item>
                       </section>
                     </pinkx>
-                    <link rel="stylesheet" type="text/css" media="screen" href="/css/2.css" />
+                    <link rel="stylesheet" type="text/css" media="screen" href="/css/3.css" />
                     <!-- 代码结束 -->
                   </div>
                 </td>
