--- a/demo/index.html
+++ b/demo/index.html
@@ -113,7 +113,7 @@
                           </item>
                           <item>
                             <a href="" class="member">
-                              <span class="job">宣传</span>
+                              <span class="job">代码</span>
                               <span class="name">游里&pinkX</span>
                             </a>
                           </item>
